# trade

./: .dev.vars.example  .env.example  .env.template  .eslintrc.cjs  .gitignore  .gitmodules  AGENTS.md  CNAME  README.md  ads.txt  index.html  package-lock.json  package.json  pytest.ini  requirements-dev.txt  ruff.toml  tiers.html  wrangler.toml
.devcontainer/: .env.example
.github/workflows/: ai_maint.yml  ci.yml  cloudflare-deploy.yml  codeql.yml  deploy-ftp.yml  deploy.yml  env-check.mjs  env-validate.yml  gh-pages.yml  jekyll-gh-pages.yml  local-qa.mjs  nightly-eval.yml  paper-trade.yml  qa.yml  sync_dns.yml
adapters/brokers/: README.md  pyproject.toml
adapters/brokers/src/goldshore_brokers/: __init__.py  alpaca.py
adapters/market/: README.md  pyproject.toml
adapters/market/src/goldshore_market/: __init__.py  options.py
apps/admin/src/lib/: auth.ts  cache.ts  format.ts  forms.ts  http.ts  risk.ts  stream.ts  ui.ts
apps/api-router/: package.json
apps/api-router/src/: router.ts
apps/api-worker/src/: index.ts
apps/api-worker/src/cron/: reconcile.ts
apps/api-worker/src/lib/: security.ts
apps/ops-console/: eslint.config.mjs  package.json  tsconfig.json
apps/ops-console/app/: globals.css  layout.tsx  page.tsx
apps/web/: package.json
apps/web-ui/: package.json
apps/web-ui/app/: globals.css  layout.tsx  page.tsx
apps/web/public/images/optimized/: README.md
apps/web/public/images/raw/: README.md
apps/web/scripts/: process-images.mjs
apps/web/src/components/: Hero.astro
apps/web/src/pages/: index.astro
apps/web/src/styles/: theme.css
assets/js/: assetFixer.js  contact.js  lore.js  main.js
assets/styles/: faberge.css
docs/: CONSOLIDATION_LOG.md
functions/api/: contact.js
infra/: README.md
infra/access/: README.md
infra/scripts/: rebuild-goldshore-access.sh  upsert-goldshore-dns.sh
libs/options/: README.md  pyproject.toml
libs/options/src/goldshore_options/: __init__.py  greeks.py
libs/risk/: README.md  pyproject.toml
libs/risk/src/goldshore_risk/: __init__.py  policies.py
libs/signals/: README.md  pyproject.toml
libs/signals/src/goldshore_signals/: __init__.py  regimes.py
libs/utils/: README.md  pyproject.toml
libs/utils/src/goldshore_utils/: __init__.py  clock.py  logging.py
repo/: index.html
services/evaluator/: README.md  pyproject.toml
services/evaluator/src/evaluator/: __init__.py  main.py  routers.py
services/executor/: README.md  pyproject.toml
services/executor/src/executor/: __init__.py  main.py  routers.py
services/marketdata/: README.md  pyproject.toml
services/marketdata/src/marketdata/: __init__.py  main.py  routers.py
services/notifier/: README.md  pyproject.toml
services/notifier/src/notifier/: __init__.py  main.py  routers.py
services/planner/: README.md  pyproject.toml
services/planner/src/planner/: __init__.py  main.py  routers.py
src/: gpt-handler.js  router.js
tests/python/: test_services.py
