[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "goldshore-market"
version = "0.1.0"
description = "Market data adapters for Gold Shore services."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build]
packages = ["src/goldshore_market"]
