[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "goldshore-options"
version = "0.1.0"
description = "Option pricing utilities for the Gold Shore trading stack."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build]
packages = ["src/goldshore_options"]
